TrailheadProject/src/objects/Challenge_Participant__c.object
<CustomObject>
    <fields>
        <fullName>Badges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Badges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Challenge_Name__c</fullName>
        <label>Challenge Name</label>
        <referenceTo>Challenge__c</referenceTo>
        <relationshipLabel>Challenge Participants</relationshipLabel>
        <relationshipName>InternToChallenge</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Intern_Name__c</fullName>
        <label>Intern Name</label>
        <referenceTo>Intern__c</referenceTo>
        <relationshipLabel>Challenge Participants</relationshipLabel>
        <relationshipName>ChallengeToIntern</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Score__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>isNew__c</fullName>
        <defaultValue>true</defaultValue>
        <label>isNew</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>startBadges__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Start Badges</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>startScore__c</fullName>
        <defaultValue>0</defaultValue>
        <label>Start Score</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>Challenge Participant</label>
    <nameField>
        <displayFormat>Participant-{0}</displayFormat>
        <label>Challenge Participant</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Challenge Participants</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>